# old-pylibjpeg-turbo

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  mkdocs.yml  project_install_steps.cmake  pyproject.toml  setup.py
.github/workflows/: build-deploy.yml
docs/: index.md  reference.md
src/pylibjpeg_turbo/: __init__.py  main.py
src/pylibjpeg_turbo/.github/workflows/: build-deploy.yml
tests/: test_pylibjpeg_turbo.py
